// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoriteButton snapshot with authorizationStatus: AUTH FavoriteButton render correctly with isFavorite={false} and buttonProperty={favoriteButtonProperty.offerCard} 1`] = `
<button
  className="place-card__bookmark-button button"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To
     bookmarks
  </span>
</button>
`;

exports[`FavoriteButton snapshot with authorizationStatus: AUTH FavoriteButton render correctly with isFavorite={false} and buttonProperty={favoriteButtonProperty.propertyCard} 1`] = `
<button
  className="property__bookmark-button button"
  onClick={[Function]}
  type="button"
>
  <svg
    className="property__bookmark-icon"
    height="33"
    width="31"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To
     bookmarks
  </span>
</button>
`;

exports[`FavoriteButton snapshot with authorizationStatus: AUTH FavoriteButton render correctly with isFavorite={true} and buttonProperty={favoriteButtonProperty.offerCard} 1`] = `
<button
  className="place-card__bookmark-button place-card__bookmark-button--active button"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    In
     bookmarks
  </span>
</button>
`;

exports[`FavoriteButton snapshot with authorizationStatus: AUTH FavoriteButton render correctly with isFavorite={true} and buttonProperty={favoriteButtonProperty.propertyCard} 1`] = `
<button
  className="property__bookmark-button property__bookmark-button--active button"
  onClick={[Function]}
  type="button"
>
  <svg
    className="property__bookmark-icon"
    height="33"
    width="31"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    In
     bookmarks
  </span>
</button>
`;

exports[`FavoriteButton snapshot with authorizationStatus: NO_AUTH FavoriteButton render correctly with isFavorite={false} and buttonProperty={favoriteButtonProperty.offerCard} 1`] = `
<a
  className="place-card__bookmark-button button"
  href="/login"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To
     bookmarks
  </span>
</a>
`;

exports[`FavoriteButton snapshot with authorizationStatus: NO_AUTH FavoriteButton render correctly with isFavorite={false} and buttonProperty={favoriteButtonProperty.propertyCard} 1`] = `
<a
  className="property__bookmark-button button"
  href="/login"
  onClick={[Function]}
  type="button"
>
  <svg
    className="property__bookmark-icon"
    height="33"
    width="31"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To
     bookmarks
  </span>
</a>
`;

exports[`FavoriteButton snapshot with authorizationStatus: NO_AUTH FavoriteButton render correctly with isFavorite={true} and buttonProperty={favoriteButtonProperty.offerCard} 1`] = `
<a
  className="place-card__bookmark-button place-card__bookmark-button--active button"
  href="/login"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    In
     bookmarks
  </span>
</a>
`;

exports[`FavoriteButton snapshot with authorizationStatus: NO_AUTH FavoriteButton render correctly with isFavorite={true} and buttonProperty={favoriteButtonProperty.propertyCard} 1`] = `
<a
  className="property__bookmark-button property__bookmark-button--active button"
  href="/login"
  onClick={[Function]}
  type="button"
>
  <svg
    className="property__bookmark-icon"
    height="33"
    width="31"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    In
     bookmarks
  </span>
</a>
`;
